dropzone upload and view PDF

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-pdf sample page</title>
+    <title>Cloakling - Anonymize documents quickly</title>
   </head>
   <body>
     <div id="root"></div>
